# blitz-playground-renderer

./: CMakeLists.txt  notes.txt  notesOpenGL.txt
dependencies/platform/32bit/linux/GL/lib/release/: libGLEW.so.2.1.0
dependencies/platform/32bit/linux/GLFW/lib/release/: libglfw.so.3.2
dependencies/platform/include/GL/: glew.h
dependencies/platform/include/KHR/: Notes.txt
dependencies/platform/include/glad/: glad.h
src/example/game/: CMakeLists.txt  main.cpp
